--- a/public/index.html
+++ b/public/index.html
@@ -119,11 +119,11 @@
                 </div>
 
                 <div class="text-center widget-vs-contents mb-4">
-                  <h4>World Cup League</h4>
+                  <h4>Campus Central Futsal League</h4>
                   <p class="mb-5">
-                    <span class="d-block">December 20th, 2020</span>
-                    <span class="d-block">9:30 AM GMT+0</span>
-                    <strong class="text-primary">New Euro Arena</strong>
+                    <span class="d-block">August 1st, 2024</span>
+                    <span class="d-block">18:00 pm</span>
+                    <strong class="text-primary">CC #1</strong>
                   </p>
 
                   <div id="date-countdown2" class="pb-1"></div>
