--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,7 @@
                   </li>
                   <li><a href="matches.html" class="nav-link">Matches</a></li>
                   <li><a href="stats.html" class="nav-link">Stats</a></li>
+                  <li><a href="highlights.html" class="nav-link">highlights</a></li>
                 </ul>
               </nav>
 
