--- a/public/man.html
+++ b/public/man.html
@@ -23,7 +23,6 @@
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css" />
     <link rel="stylesheet" href="css/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
   </head>
 
   <body>
@@ -87,7 +86,7 @@
                   <th scope="col">Goals</th>
                 </tr>
               </thead>
-              <tbody id="goal-body">
+              <tbody>
                 <!-- Data will be inserted here by JavaScript -->
               </tbody>
             </table>
@@ -107,7 +106,7 @@
                   <th scope="col">Assists</th>
                 </tr>
               </thead>
-              <tbody id="assist-body">
+              <tbody>
                 <!-- Data will be inserted here by JavaScript -->
               </tbody>
             </table>
@@ -200,62 +199,43 @@
     <script src="js/main.js"></script>
 
     <script>
-      $(document).ready(function () {
-        var csvUrl = "goal.csv"; // Replace with the path to your CSV file
+      document.addEventListener("DOMContentLoaded", function () {
+        fetch("/top-goals-players")
+          .then((response) => response.json())
+          .then((data) => {
+            console.log(data);
+            renderPlayers(data, "top-goals-players");
+          })
+          .catch((error) =>
+            console.error("Error fetching top goals players:", error)
+          );
 
-        Papa.parse(csvUrl, {
-          download: true,
-          header: true,
-          complete: function (results) {
-            var data = results.data;
-            // Sort the data by points in descending order
-            data.sort(function (a, b) {
-              return b.PTS - a.PTS;
-            });
-
-            var tableBody = $("#goal-body");
-            for (var i = 0; i < data.length; i++) {
-              var row = data[i];
-              var rowHtml = `
-                          <tr>
-                              <td>${row.Rank}</td>
-                              <td><strong class="text-white">${row.Player}</strong></td>
-                              <td>${row.Team}</td>
-                              <td>${row.Goals}</td>
-                          </tr>`;
-              tableBody.append(rowHtml);
-            }
-          },
-        });
+        fetch("/top-assists-players")
+          .then((response) => response.json())
+          .then((data) => {
+            console.log(data);
+            renderPlayers(data, "top-assists-players", "assists");
+          })
+          .catch((error) =>
+            console.error("Error fetching top assists players:", error)
+          );
       });
-      $(document).ready(function () {
-        var csvUrl = "assist.csv"; // Replace with the path to your CSV file
 
-        Papa.parse(csvUrl, {
-          download: true,
-          header: true,
-          complete: function (results) {
-            var data = results.data;
-            // Sort the data by points in descending order
-            data.sort(function (a, b) {
-              return b.PTS - a.PTS;
-            });
+      function renderPlayers(players, tableId, statType = "goals") {
+        const tableBody = document.querySelector(`#${tableId} tbody`);
+        tableBody.innerHTML = ""; // Clear existing content
 
-            var tableBody = $("#assist-body");
-            for (var i = 0; i < data.length; i++) {
-              var row = data[i];
-              var rowHtml = `
-                          <tr>
-                              <td>${row.Rank}</td>
-                              <td><strong class="text-white">${row.Player}</strong></td>
-                              <td>${row.Team}</td>
-                              <td>${row.Assists}</td>
-                          </tr>`;
-              tableBody.append(rowHtml);
-            }
-          },
+        players.forEach((player, index) => {
+          const row = document.createElement("tr");
+          row.innerHTML = `
+          <th scope="row">${index + 1}</th>
+          <td>${player.playerName}</td>
+          <td>${player.teamName}</td>
+          <td>${player[statType]}</td>
+        `;
+          tableBody.appendChild(row);
         });
-      });
+      }
     </script>
   </body>
 </html>
