added 2 clolums and headings to table

--- a/public/index.html
+++ b/public/index.html
@@ -140,6 +140,8 @@
                       <th>W</th>
                       <th>D</th>
                       <th>L</th>
+                      <th>GA</th>
+                      <th>GF</th>
                       <th>PTS</th>
                     </tr>
                   </thead>
@@ -340,6 +342,8 @@
                               <td>${row.W}</td>
                               <td>${row.D}</td>
                               <td>${row.L}</td>
+                              <td>${row.GA}</td>
+                              <td>${row.GF}</td>
                               <td>${row.PTS}</td>
                           </tr>`;
               tableBody.append(rowHtml);
