--- a/public/matches.html
+++ b/public/matches.html
@@ -61,6 +61,7 @@
                   <li>
                     <a href="stats.html" class="nav-link">Stats</a>
                   </li>
+                  <li><a href="login.html" class="nav-link">Login</a></li>
                 </ul>
               </nav>
 
