--- a/public/signup.html
+++ b/public/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Campus Central Futsal League</title>
+    <title>Signup - Campus Central Futsal League</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
@@ -18,10 +18,8 @@
                   <div class="ml-auto">
                       <nav class="site-navigation position-relative text-right" role="navigation">
                           <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                              <li class="active"><a href="index.html" class="nav-link">Home</a></li>
-                              <li><a href="matches.html" class="nav-link">Matches</a></li>
-                              <li><a href="stats.html" class="nav-link">Stats</a></li>
-                              <li><a href="login.html" class="nav-link">Login</a></li>
+                            <li class="active"><a href="signup.html" class="nav-link">Create User</a></li>
+                            <li ><a href="admin.html" class="nav-link">Admin</a></li>
                           </ul>
                       </nav>
                       <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right text-white"><span class="icon-menu h3 text-white"></span></a>
@@ -34,8 +32,8 @@
           <div class="container">
               <div class="row align-items-center">
                   <div class="col-lg-6 ml-auto">
-                      <h1 class="text-white">Futsal League</h1>
-                      <p>Campus Central Futsal League</p>
+                      <h1 class="text-white">Signup</h1>
+                      <p>Create your account to manage the Futsal League.</p>
                   </div>
               </div>
           </div>
@@ -44,25 +42,23 @@
       <div class="site-section bg-dark">
           <div class="container">
               <div class="row">
-                  <div class="col-lg-12">
+                  <div class="col-lg-6 mx-auto">
                       <div class="widget-next-match">
                           <div class="widget-title">
-                              <h3>All Players</h3>
+                              <h3>Signup</h3>
                           </div>
                           <div class="widget-body mb-3">
-                              <table class="table custom-table" id="players-table">
-                                  <thead>
-                                      <tr>
-                                          <th>Picture</th>
-                                          <th>Full Name</th>
-                                          <th>Team</th>
-                                          <th>Team Picture</th>
-                                      </tr>
-                                  </thead>
-                                  <tbody>
-                                      <!-- Player data will be loaded here -->
-                                  </tbody>
-                              </table>
+                              <form id="signup-form">
+                                  <div class="form-group">
+                                      <label for="username">Username</label>
+                                      <input type="text" id="username" class="form-control" required />
+                                  </div>
+                                  <div class="form-group">
+                                      <label for="password">Password</label>
+                                      <input type="password" id="password" class="form-control" required />
+                                  </div>
+                                  <button type="submit" class="btn btn-primary">Signup</button>
+                              </form>
                           </div>
                       </div>
                   </div>
@@ -92,29 +88,42 @@
 
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/main.js"></script>
-  
-<script>
+
+  <script>
     document.addEventListener("DOMContentLoaded", function() {
-        fetch('/allPlayers')
-            .then(response => response.json())
-            .then(players => {
-                const tableBody = document.querySelector('#players-table tbody');
-                console.log(players);
-                players.forEach(player => {
-                    const row = document.createElement('tr');
-                    const Myphoto = player.photo.substring(6);
-                    const MyTeamphoto = player.teamId.logo.substring(6);
-                    row.innerHTML = `
-                        <td><img src="../${Myphoto}" alt="${player.fullname}" width="50" /></td>
-                        <td>${player.fullname}</td>
-                        <td>${player.teamId.name}</td>
-                        <td><img src="${MyTeamphoto}" alt="${player.teamId.name}" width="50" /></td>
-                    `;
-                    tableBody.appendChild(row);
+        document.getElementById('signup-form').addEventListener('submit', async function(e) {
+            e.preventDefault();
+
+            const username = document.getElementById('username').value;
+            const password = document.getElementById('password').value;
+
+            console.log(username,password)
+
+            try {
+                const response = await fetch('/auth/signup', {
+                    method: 'POST',
+                    headers:{
+                        "content-Type":"application/json"
+                    },
+                    body: JSON.stringify({
+                        username,
+                        password
+                    })
                 });
-            })
-            .catch(error => console.error('Error fetching players:', error));
+
+                if (response.ok) {
+                    // Redirect to another page upon successful signup
+                    window.location.href = '/admin.html'; // Adjust the redirect URL as needed
+                } else {
+                    const errorData = await response.json();
+                    alert(`Signup failed: ${errorData.error || 'Unknown error'}`);
+                }
+            } catch (error) {
+                console.error('Error during signup:', error);
+                alert('An error occurred while signing up.');
+            }
+        });
     });
-</script>
+  </script>
 </body>
 </html>
