--- a/public/admin.html
+++ b/public/admin.html
@@ -74,7 +74,7 @@
               </div>
               <div class="form-group">
                 <label for="player-photo">Photo</label>
-                <input type="file" id="player-photo" class="form-control" accept="image/*" required />
+                <input type="file" id="player-photo" class="form-control" accept="image/*" />
               </div>
               <button type="submit" class="btn btn-primary">Register Player</button>
             </form>
