--- a/public/edit.html
+++ b/public/edit.html
@@ -27,6 +27,16 @@
 
   <body>
     <div class="site-wrap">
+
+      <div class="site-mobile-menu site-navbar-target">
+        <div class="site-mobile-menu-header">
+          <div class="site-mobile-menu-close">
+            <span class="icon-close2 js-menu-toggle"></span>
+          </div>
+        </div>
+        <div class="site-mobile-menu-body"></div>
+      </div>
+
       <header class="site-navbar py-4" role="banner">
         <div class="container">
           <div class="d-flex align-items-center">
@@ -54,7 +64,9 @@
           </div>
         </div>
       </div>
-      <br><br><br>
+      
+      <div class="container"></div>
+
       <div class="container">
         <div class="row">
           <div class="col-lg-6 mb-4">
