--- a/public/admin.html
+++ b/public/admin.html
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Admin Page - Campus Central Futsal League</title>
+    <title>Off-brand supersport</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="fonts/icomoon/style.css" />
+
     <link rel="stylesheet" href="css/bootstrap/bootstrap.css" />
     <link rel="stylesheet" href="css/jquery-ui.css" />
     <link rel="stylesheet" href="css/owl.carousel.min.css" />
     <link rel="stylesheet" href="css/owl.theme.default.min.css" />
+    <link rel="stylesheet" href="css/owl.theme.default.min.css" />
+
     <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
+
     <link rel="stylesheet" href="css/bootstrap-datepicker.css" />
+
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css" />
+
     <link rel="stylesheet" href="css/aos.css" />
+
     <link rel="stylesheet" href="css/style.css" />
 
     <style>
@@ -23,25 +37,37 @@
           color: #fff;
       }
     </style>
+
   </head>
 
   <body>
     <div class="site-wrap">
-      <header class="site-navbar py-4" role="banner">
-        <div class="container">
-          <div class="d-flex align-items-center">
-            <div class="ml-auto">
-              <nav class="site-navigation position-relative text-right" role="navigation">
-                <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                  <li><a href="index.html" class="nav-link">Home</a></li>
-                  <li><a href="signup.html" class="nav-link">Create User</a></li>
-                  <li class="active"><a href="admin.html" class="nav-link">Admin</a></li>
-                  <li><a id="logout" href="admin.html" class="nav-link">logout</a></li>
-                </ul>
-              </nav>
-            </div>
-          </div>
+      
+    <div class="site-mobile-menu site-navbar-target">
+        <div class="site-mobile-menu-header">
+        <div class="site-mobile-menu-close">
+            <span class="icon-close2 js-menu-toggle"></span>
         </div>
+        </div>
+        <div class="site-mobile-menu-body"></div>
+    </div>
+
+      <header class="site-navbar py-4" role="banner">
+          <div class="container">
+              <div class="d-flex align-items-center">
+                  <div class="ml-auto">
+                      <nav class="site-navigation position-relative text-right" role="navigation">
+                        <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
+                          <li><a href="index.html" class="nav-link">Home</a></li>
+                          <li><a href="signup.html" class="nav-link">Create User</a></li>
+                          <li><a href="admin.html" class="nav-link">Admin</a></li>
+                          <li class="active"><a id="logout" href="admin.html" class="nav-link">logout</a></li>
+                        </ul>
+                      </nav>
+                      <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right text-white"><span class="icon-menu h3 text-white"></span></a>
+                  </div>
+              </div>
+          </div>
       </header>
 
       <div class="hero overlay" style="background-image: url('images/bg_3.jpg')">
@@ -54,7 +80,10 @@
           </div>
         </div>
       </div>
+      
+      <div class="container"></div>
       <br><br><br>
+
       <div class="container">
         <div class="row">
           <div class="col-lg-6 mb-4">
