--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Campus Central Futsal League</title>
+  <head>
+    <title>Off-brand supersport</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="fonts/icomoon/style.css" />
+
     <link rel="stylesheet" href="css/bootstrap/bootstrap.css" />
+    <link rel="stylesheet" href="css/jquery-ui.css" />
+    <link rel="stylesheet" href="css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="css/owl.theme.default.min.css" />
+    <link rel="stylesheet" href="css/owl.theme.default.min.css" />
+
+    <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
+
+    <link rel="stylesheet" href="css/bootstrap-datepicker.css" />
+
+    <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css" />
+
+    <link rel="stylesheet" href="css/aos.css" />
+
     <link rel="stylesheet" href="css/style.css" />
-</head>
-<body>
-  <div class="site-wrap">
+  </head>
+
+  <body>
+    <div class="site-wrap">
+      <div class="site-mobile-menu site-navbar-target">
+        <div class="site-mobile-menu-header">
+          <div class="site-mobile-menu-close">
+            <span class="icon-close2 js-menu-toggle"></span>
+          </div>
+        </div>
+        <div class="site-mobile-menu-body"></div>
+      </div>
+
       <header class="site-navbar py-4" role="banner">
           <div class="container">
               <div class="d-flex align-items-center">
@@ -30,91 +61,166 @@
           </div>
       </header>
 
-      <div class="hero overlay" style="background-image: url('images/bg_3.jpg')">
-          <div class="container">
-              <div class="row align-items-center">
-                  <div class="col-lg-6 ml-auto">
-                      <h1 class="text-white">Futsal League</h1>
-                      <p>Campus Central Futsal League</p>
-                  </div>
-              </div>
+      <div
+        class="hero overlay"
+        style="background-image: url('images/bg_3.jpg')"
+      >
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-lg-6 ml-auto">
+              <h1 class="text-white">Futsal League</h1>
+              <p>Campus Central Futsal League</p>
+            </div>
           </div>
+        </div>
       </div>
+
+      <div class="container"></div>
 
       <div class="site-section bg-dark">
-          <div class="container">
-              <div class="row">
-                  <div class="col-lg-12">
-                      <div class="widget-next-match">
-                          <div class="widget-title">
-                              <h3>All Players</h3>
-                          </div>
-                          <div class="widget-body mb-3">
-                              <table class="table custom-table" id="players-table">
-                                  <thead>
-                                      <tr>
-                                          <th>Picture</th>
-                                          <th>Full Name</th>
-                                          <th>Team</th>
-                                          <th>Team Picture</th>
-                                      </tr>
-                                  </thead>
-                                  <tbody>
-                                      <!-- Player data will be loaded here -->
-                                  </tbody>
-                              </table>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="widget-next-match">
+                        <div class="widget-title">
+                            <h3>All Players</h3>
+                        </div>
+                        <div class="widget-body mb-3">
+                            <table class="table custom-table" id="players-table">
+                                <thead>
+                                    <tr>
+                                        <th>Picture</th>
+                                        <th>Full Name</th>
+                                        <th>Team</th>
+                                        <th>Team Picture</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <!-- Player data will be loaded here -->
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
       </div>
+      <!-- .site-section -->
 
       <footer class="footer-section">
-          <div class="container">
-              <div class="row text-center">
-                  <div class="col-md-12">
-                      <div class="pt-5">
-                          <p>
-                              Copyright &copy;
-                              <script>
-                                  document.write(new Date().getFullYear());
-                              </script>
-                              All rights reserved
-                          </p>
-                      </div>
-                  </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-3">
+              <div class="widget mb-3">
+                <h3>News</h3>
+                <ul class="list-unstyled links">
+                  <li><a href="#">All</a></li>
+                  <li><a href="#">Club News</a></li>
+                  <li><a href="#">Media Center</a></li>
+                  <li><a href="#">Video</a></li>
+                  <li><a href="#">RSS</a></li>
+                </ul>
               </div>
-          </div>
-      </footer>
-  </div>
-  <!-- .site-wrap -->
+            </div>
+            <div class="col-lg-3">
+              <div class="widget mb-3">
+                <h3>Tickets</h3>
+                <ul class="list-unstyled links">
+                  <li><a href="#">Online Ticket</a></li>
+                  <li><a href="#">Payment and Prices</a></li>
+                  <li><a href="#">Contact &amp; Booking</a></li>
+                  <li><a href="#">Tickets</a></li>
+                  <li><a href="#">Coupon</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="widget mb-3">
+                <h3>Matches</h3>
+                <ul class="list-unstyled links">
+                  <li><a href="#">Standings</a></li>
+                  <li><a href="#">World Cup</a></li>
+                  <li><a href="#">La Lega</a></li>
+                  <li><a href="#">Hyper Cup</a></li>
+                  <li><a href="#">World League</a></li>
+                </ul>
+              </div>
+            </div>
 
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/main.js"></script>
-  
-<script>
-    document.addEventListener("DOMContentLoaded", function() {
-        fetch('/allPlayers')
-            .then(response => response.json())
-            .then(players => {
-                const tableBody = document.querySelector('#players-table tbody');
-                console.log(players);
-                players.forEach(player => {
-                    const row = document.createElement('tr');
-                    const Myphoto = player.photo.substring(6);
-                    const MyTeamphoto = player.teamId.logo.substring(6);
-                    row.innerHTML = `
-                        <td><img src="../${Myphoto}" alt="${player.fullname}" width="50" /></td>
-                        <td>${player.fullname}</td>
-                        <td>${player.teamId.name}</td>
-                        <td><img src="${MyTeamphoto}" alt="${player.teamId.name}" width="50" /></td>
-                    `;
-                    tableBody.appendChild(row);
-                });
-            })
-            .catch(error => console.error('Error fetching players:', error));
-    });
-</script>
-</body>
+            <div class="col-lg-3">
+              <div class="widget mb-3">
+                <h3>Social</h3>
+                <ul class="list-unstyled links">
+                  <li><a href="#">Twitter</a></li>
+                  <li><a href="#">Facebook</a></li>
+                  <li><a href="#">Instagram</a></li>
+                  <li><a href="#">Youtube</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="row text-center">
+            <div class="col-md-12">
+              <div class="pt-5">
+                <p>
+                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                  Copyright &copy;
+                  <script>
+                    document.write(new Date().getFullYear());
+                  </script>
+                  All rights reserved
+                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+
+    </div>
+    <!-- .site-wrap -->
+
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/jquery-migrate-3.0.1.min.js"></script>
+    <script src="js/jquery-ui.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/jquery.stellar.min.js"></script>
+    <script src="js/jquery.countdown.min.js"></script>
+    <script src="js/bootstrap-datepicker.min.js"></script>
+    <script src="js/jquery.easing.1.3.js"></script>
+    <script src="js/aos.js"></script>
+    <script src="js/jquery.fancybox.min.js"></script>
+    <script src="js/jquery.sticky.js"></script>
+    <script src="js/jquery.mb.YTPlayer.min.js"></script>
+
+    <script src="js/main.js"></script>
+    
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            fetch('/allPlayers')
+                .then(response => response.json())
+                .then(players => {
+                    const tableBody = document.querySelector('#players-table tbody');
+                    players.forEach(player => {
+                        const row = document.createElement('tr');
+                        const Myphoto = player.photo.substring(6);
+                        const MyTeamphoto = player.teamId.logo.substring(6);
+                        row.innerHTML = `
+                            <td><img src="../${Myphoto}" alt="${player.fullname}" width="40" /></td>
+                            <td>${player.fullname}</td>
+                            <td>${player.teamId.name}</td>
+                            <td><img src="${MyTeamphoto}" alt="${player.teamId.name}" width="40" /></td>
+                        `;
+                        tableBody.appendChild(row);
+                    });
+                })
+                .catch(error => console.error('Error fetching players:', error));
+        });
+    </script>
+
+
+  </body>
 </html>
