--- a/public/login.html
+++ b/public/login.html
@@ -1,17 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Login - Campus Central Futsal League</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="fonts/icomoon/style.css" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.css" />
-    <link rel="stylesheet" href="css/style.css" />
-</head>
+    <head>
+      <title>Off-brand supersport</title>
+      <meta charset="utf-8" />
+      <meta
+        name="viewport"
+        content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      />
+  
+      <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+        rel="stylesheet"
+      />
+  
+      <link rel="stylesheet" href="fonts/icomoon/style.css" />
+  
+      <link rel="stylesheet" href="css/bootstrap/bootstrap.css" />
+      <link rel="stylesheet" href="css/jquery-ui.css" />
+      <link rel="stylesheet" href="css/owl.carousel.min.css" />
+      <link rel="stylesheet" href="css/owl.theme.default.min.css" />
+      <link rel="stylesheet" href="css/owl.theme.default.min.css" />
+  
+      <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
+  
+      <link rel="stylesheet" href="css/bootstrap-datepicker.css" />
+  
+      <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css" />
+  
+      <link rel="stylesheet" href="css/aos.css" />
+  
+      <link rel="stylesheet" href="css/style.css" />
+    </head>
 <body>
   <div class="site-wrap">
+
+    <div class="site-mobile-menu site-navbar-target">
+        <div class="site-mobile-menu-header">
+        <div class="site-mobile-menu-close">
+            <span class="icon-close2 js-menu-toggle"></span>
+        </div>
+        </div>
+        <div class="site-mobile-menu-body"></div>
+    </div>
+
       <header class="site-navbar py-4" role="banner">
           <div class="container">
               <div class="d-flex align-items-center">
@@ -40,6 +71,8 @@
               </div>
           </div>
       </div>
+
+      <div class="container"></div>
 
       <div class="site-section bg-dark">
           <div class="container">
@@ -88,8 +121,22 @@
   </div>
   <!-- .site-wrap -->
 
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/main.js"></script>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/jquery-migrate-3.0.1.min.js"></script>
+    <script src="js/jquery-ui.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/jquery.stellar.min.js"></script>
+    <script src="js/jquery.countdown.min.js"></script>
+    <script src="js/bootstrap-datepicker.min.js"></script>
+    <script src="js/jquery.easing.1.3.js"></script>
+    <script src="js/aos.js"></script>
+    <script src="js/jquery.fancybox.min.js"></script>
+    <script src="js/jquery.sticky.js"></script>
+    <script src="js/jquery.mb.YTPlayer.min.js"></script>
+
+    <script src="js/main.js"></script>
 
   <script>
     document.addEventListener("DOMContentLoaded", function() {
