--- a/public/signup.html
+++ b/public/signup.html
@@ -12,15 +12,27 @@
 </head>
 <body>
   <div class="site-wrap">
+      
+    <div class="site-mobile-menu site-navbar-target">
+        <div class="site-mobile-menu-header">
+        <div class="site-mobile-menu-close">
+            <span class="icon-close2 js-menu-toggle"></span>
+        </div>
+        </div>
+        <div class="site-mobile-menu-body"></div>
+    </div>
+
       <header class="site-navbar py-4" role="banner">
           <div class="container">
               <div class="d-flex align-items-center">
                   <div class="ml-auto">
                       <nav class="site-navigation position-relative text-right" role="navigation">
-                          <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                            <li class="active"><a href="signup.html" class="nav-link">Create User</a></li>
-                            <li ><a href="admin.html" class="nav-link">Admin</a></li>
-                          </ul>
+                        <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
+                          <li><a href="index.html" class="nav-link">Home</a></li>
+                          <li><a href="signup.html" class="nav-link">Create User</a></li>
+                          <li><a href="admin.html" class="nav-link">Admin</a></li>
+                          <li class="active"><a id="logout" href="admin.html" class="nav-link">logout</a></li>
+                        </ul>
                       </nav>
                       <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right text-white"><span class="icon-menu h3 text-white"></span></a>
                   </div>
@@ -38,6 +50,8 @@
               </div>
           </div>
       </div>
+
+      <div class="container"></div>
 
       <div class="site-section bg-dark">
           <div class="container">
@@ -86,8 +100,21 @@
   </div>
   <!-- .site-wrap -->
 
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/main.js"></script>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/jquery-migrate-3.0.1.min.js"></script>
+    <script src="js/jquery-ui.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/jquery.stellar.min.js"></script>
+    <script src="js/jquery.countdown.min.js"></script>
+    <script src="js/bootstrap-datepicker.min.js"></script>
+    <script src="js/jquery.easing.1.3.js"></script>
+    <script src="js/aos.js"></script>
+    <script src="js/jquery.fancybox.min.js"></script>
+    <script src="js/jquery.sticky.js"></script>
+    <script src="js/jquery.mb.YTPlayer.min.js"></script>
+    <script src="js/main.js"></script>
 
   <script>
     document.addEventListener("DOMContentLoaded", function() {
