--- a/public/stats.html
+++ b/public/stats.html
@@ -21,6 +21,16 @@
 
 <body>
   <div class="site-wrap">
+
+    <div class="site-mobile-menu site-navbar-target">
+      <div class="site-mobile-menu-header">
+      <div class="site-mobile-menu-close">
+          <span class="icon-close2 js-menu-toggle"></span>
+      </div>
+      </div>
+      <div class="site-mobile-menu-body"></div>
+    </div>
+
     <header class="site-navbar py-4" role="banner">
       <div class="container">
         <div class="d-flex align-items-center">
