--- a/public/login.html
+++ b/public/login.html
@@ -1,159 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>Login - Campus Central Futsal League</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="fonts/icomoon/style.css" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.css" />
     <link rel="stylesheet" href="css/style.css" />
-</head>
-<body>
-  <div class="site-wrap">
+  </head>
+  <body>
+    <div class="site-wrap">
       <header class="site-navbar py-4" role="banner">
-          <div class="container">
-              <div class="d-flex align-items-center">
-                  <div class="ml-auto">
-                      <nav class="site-navigation position-relative text-right" role="navigation">
-                          <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                            <li><a href="index.html" class="nav-link">Home</a></li>
-                            <li><a href="matches.html" class="nav-link">Matches</a></li>
-                            <li><a href="stats.html" class="nav-link">Stats</a></li>
-                            <li class="active"><a href="login.html" class="nav-link">Login</a></li>
-                          </ul>
-                      </nav>
-                      <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right text-white"><span class="icon-menu h3 text-white"></span></a>
-                  </div>
-              </div>
+        <div class="container">
+          <div class="d-flex align-items-center">
+            <div class="ml-auto">
+              <nav
+                class="site-navigation position-relative text-right"
+                role="navigation"
+              >
+                <ul
+                  class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block"
+                >
+                  <li><a href="index.html" class="nav-link">Home</a></li>
+                  <li><a href="matches.html" class="nav-link">Matches</a></li>
+                  <li><a href="stats.html" class="nav-link">Stats</a></li>
+                  <li class="active">
+                    <a href="login.html" class="nav-link">Login</a>
+                  </li>
+                </ul>
+              </nav>
+              <a
+                href="#"
+                class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right text-white"
+                ><span class="icon-menu h3 text-white"></span
+              ></a>
+            </div>
           </div>
+        </div>
       </header>
 
-      <div class="hero overlay" style="background-image: url('images/bg_3.jpg')">
-          <div class="container">
-              <div class="row align-items-center">
-                  <div class="col-lg-6 ml-auto">
-                      <h1 class="text-white">Login</h1>
-                      <p>Access your account to manage the Futsal League.</p>
-                  </div>
-              </div>
+      <div
+        class="hero overlay"
+        style="background-image: url('images/back.png')"
+      >
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-lg-6 ml-auto">
+              <h1 class="text-white">Login</h1>
+              <p>Access your account to manage the Futsal League.</p>
+            </div>
           </div>
+        </div>
       </div>
 
       <div class="site-section bg-dark">
-          <div class="container">
-              <div class="row">
-                  <div class="col-lg-6 mx-auto">
-                      <div class="widget-next-match">
-                          <div class="widget-title">
-                              <h3>Login</h3>
-                          </div>
-                          <div class="widget-body mb-3">
-                              <form id="login-form">
-                                  <div class="form-group">
-                                      <label for="username">Username</label>
-                                      <input type="text" id="username" class="form-control" required />
-                                  </div>
-                                  <div class="form-group">
-                                      <label for="password">Password</label>
-                                      <input type="password" id="password" class="form-control" required />
-                                  </div>
-                                  <button type="submit" class="btn btn-primary">Login</button>
-                              </form>
-                          </div>
-                      </div>
-                  </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 mx-auto">
+              <div class="widget-next-match">
+                <div class="widget-title">
+                  <h3>Login</h3>
+                </div>
+                <div class="widget-body mb-3">
+                  <form id="login-form">
+                    <div class="form-group">
+                      <label for="username">Username</label>
+                      <input
+                        type="text"
+                        id="username"
+                        class="form-control"
+                        required
+                      />
+                    </div>
+                    <div class="form-group">
+                      <label for="password">Password</label>
+                      <input
+                        type="password"
+                        id="password"
+                        class="form-control"
+                        required
+                      />
+                    </div>
+                    <button type="submit" class="btn btn-primary">Login</button>
+                  </form>
+                </div>
               </div>
+            </div>
           </div>
+        </div>
       </div>
 
       <footer class="footer-section">
-          <div class="container">
-              <div class="row text-center">
-                  <div class="col-md-12">
-                      <div class="pt-5">
-                          <p>
-                              Copyright &copy;
-                              <script>
-                                  document.write(new Date().getFullYear());
-                              </script>
-                              All rights reserved
-                          </p>
-                      </div>
-                  </div>
+        <div class="container">
+          <div class="row text-center">
+            <div class="col-md-12">
+              <div class="pt-5">
+                <p>
+                  Copyright &copy;
+                  <script>
+                    document.write(new Date().getFullYear());
+                  </script>
+                  All rights reserved
+                </p>
               </div>
+            </div>
           </div>
+        </div>
       </footer>
-  </div>
-  <!-- .site-wrap -->
+    </div>
+    <!-- .site-wrap -->
 
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/main.js"></script>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/main.js"></script>
 
-  <script>
-    document.addEventListener("DOMContentLoaded", function() {
-        
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
         async function checkLog() {
+          const username = document.getElementById("username").value;
+          const password = document.getElementById("password").value;
 
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('password').value;
+          console.log(username, password);
 
-            console.log(username,password)
+          try {
+            const response = await fetch("/auth/logined", {
+              method: "POST",
+              headers: {
+                "content-Type": "application/json",
+              },
+            });
 
-            try {
-                const response = await fetch('/auth/logined', {
-                    method: 'POST',
-                    headers:{
-                        "content-Type":"application/json"
-                    }
-                });
-
-                if (response.ok) {
-                    // Redirect to another page upon successful login
-                    window.location.href = '/admin.html'; // Adjust the redirect URL as needed
-                }
-            } catch (error) {
-                console.error('Error during login:', error);
+            if (response.ok) {
+              // Redirect to another page upon successful login
+              window.location.href = "/admin.html"; // Adjust the redirect URL as needed
             }
-        };
+          } catch (error) {
+            console.error("Error during login:", error);
+          }
+        }
 
         checkLog();
 
-        document.getElementById('login-form').addEventListener('submit', async function(e) {
+        document
+          .getElementById("login-form")
+          .addEventListener("submit", async function (e) {
             e.preventDefault();
 
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('password').value;
+            const username = document.getElementById("username").value;
+            const password = document.getElementById("password").value;
 
-            console.log(username,password)
+            console.log(username, password);
 
             try {
-                const response = await fetch('/auth/login', {
-                    method: 'POST',
-                    headers:{
-                        "content-Type":"application/json"
-                    },
-                    body: JSON.stringify({
-                        username,
-                        password
-                    })
-                });
+              const response = await fetch("/auth/login", {
+                method: "POST",
+                headers: {
+                  "content-Type": "application/json",
+                },
+                body: JSON.stringify({
+                  username,
+                  password,
+                }),
+              });
 
-                if (response.ok) {
-                    // Redirect to another page upon successful login
-                    const data = await response.json();
-                    window.location.href = '/admin.html'; // Adjust the redirect URL as needed
-                } else {
-                    const errorData = await response.json();
-                    alert(`Login failed: ${errorData.error || 'Unknown error'}`);
-                }
+              if (response.ok) {
+                // Redirect to another page upon successful login
+                const data = await response.json();
+                window.location.href = "/admin.html"; // Adjust the redirect URL as needed
+              } else {
+                const errorData = await response.json();
+                alert(`Login failed: ${errorData.error || "Unknown error"}`);
+              }
             } catch (error) {
-                console.error('Error during login:', error);
-                alert('An error occurred while logging in.');
+              console.error("Error during login:", error);
+              alert("An error occurred while logging in.");
             }
-        });
-    });
-  </script>
-</body>
+          });
+      });
+    </script>
+  </body>
 </html>
