--- a/public/matches.html
+++ b/public/matches.html
@@ -77,7 +77,7 @@
 
       <div
         class="hero overlay"
-        style="background-image: url('images/bg_3.jpg')"
+        style="background-image: url('images/back.png')"
       >
         <div class="container">
           <div class="row align-items-center">
