--- a/public/signup.html
+++ b/public/signup.html
@@ -29,9 +29,10 @@
                       <nav class="site-navigation position-relative text-right" role="navigation">
                         <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                           <li><a href="index.html" class="nav-link">Home</a></li>
-                          <li><a href="signup.html" class="nav-link">Create User</a></li>
+                          <li><a href="editStandings.html" class="nav-link">Edit Standings</a></li>
+                          <li class="active"><a href="signup.html" class="nav-link">Create User</a></li>
                           <li><a href="admin.html" class="nav-link">Admin</a></li>
-                          <li class="active"><a id="logout" href="admin.html" class="nav-link">logout</a></li>
+                          <li><a id="logout" href="/auth/logout" class="nav-link">logout</a></li>
                         </ul>
                       </nav>
                       <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right text-white"><span class="icon-menu h3 text-white"></span></a>
@@ -40,15 +41,15 @@
           </div>
       </header>
 
-      <div class="hero overlay" style="background-image: url('images/bg_3.jpg')">
-          <div class="container">
-              <div class="row align-items-center">
-                  <div class="col-lg-6 ml-auto">
-                      <h1 class="text-white">Signup</h1>
-                      <p>Create your account to manage the Futsal League.</p>
-                  </div>
-              </div>
+      <div class="hero overlay py-4" style="background-image: url('images/bg_3.jpg')">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-lg-6 mx-auto text-center">
+                <h1 class="text-white">Create User</h1>
+                <p>Create user account to manage the Futsal League.</p>
+            </div>
           </div>
+        </div>
       </div>
 
       <div class="container"></div>
@@ -150,6 +151,15 @@
                 alert('An error occurred while signing up.');
             }
         });
+        document.getElementById('logout').addEventListener('click',()=>{
+          fetch("/auth/logout")
+          .then((res)=>{
+            window.location.href = "index.html";
+          })
+          .catch((error)=>{
+            console.log(error);
+          })
+      });
     });
   </script>
 </body>
