--- a/public/edit.html
+++ b/public/edit.html
@@ -54,7 +54,7 @@
         </div>
       </header>
 
-      <div class="hero overlay" style="background-image: url('images/bg_3.jpg')">
+      <div class="hero overlay py-4" style="background-image: url('images/bg_3.jpg')">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-lg-5 mx-auto text-center">
