--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,7 @@
                           <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                               <li class="active"><a href="index.html" class="nav-link">Home</a></li>
                               <li><a href="matches.html" class="nav-link">Matches</a></li>
+                              <li><a href="standing.html" class="nav-link">Standings</a></li>
                               <li><a href="stats.html" class="nav-link">Stats</a></li>
                               <li><a href="login.html" class="nav-link">Login</a></li>
                           </ul>
@@ -60,14 +61,18 @@
               </div>
           </div>
       </header>
-
+      
       <div
-        class="hero overlay"
+        class="hero overlay py-4"
         style="background-image: url('images/bg_3.jpg')"
+        loading="lazy"
       >
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-lg-6 ml-auto">
+            <div class="col-md-10 mx-auto col-lg-5">
+              <img style="border-radius: 10px;" width="500px" src="images/bg_3.jpg">
+            </div>
+            <div class="col-lg-6 text-center text-lg-start">
               <h1 class="text-white">Futsal League</h1>
               <p>Campus Central Futsal League</p>
             </div>
@@ -75,12 +80,13 @@
         </div>
       </div>
 
-      <div class="container"></div>
+      <div class="container"><hr></div>
 
       <div class="site-section bg-dark">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
+              <!-- 12 to 8 -->
+                <div class="col-lg-12"> 
                     <div class="widget-next-match">
                         <div class="widget-title">
                             <h3>All Players</h3>
