--- a/public/stats.html
+++ b/public/stats.html
@@ -39,6 +39,7 @@
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="matches.html" class="nav-link">Matches</a></li>
+                <li><a href="standing.html" class="nav-link">Standings</a></li>
                 <li class="active"><a href="stats.html" class="nav-link">Stats</a></li>
                 <li><a href="login.html" class="nav-link">Login</a></li>
               </ul>
@@ -51,7 +52,7 @@
       </div>
     </header>
 
-    <div class="hero overlay" style="background-image: url('images/bg_3.jpg')">
+    <div class="hero overlay py-4" style="background-image: url('images/bg_3.jpg')">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-5 mx-auto text-center">
