--- a/public/index.html
+++ b/public/index.html
@@ -80,12 +80,11 @@
         </div>
       </div>
 
-      <div class="container"><hr></div>
+      <!-- <div class="container"><hr></div> -->
 
-      <div class="site-section bg-dark">
+      <!-- <div class="site-section bg-dark">
         <div class="container">
             <div class="row">
-              <!-- 12 to 8 -->
                 <div class="col-lg-12"> 
                     <div class="widget-next-match">
                         <div class="widget-title">
@@ -102,7 +101,6 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <!-- Player data will be loaded here -->
                                 </tbody>
                             </table>
                         </div>
@@ -110,45 +108,20 @@
                 </div>
             </div>
         </div>
-      </div>
+      </div> -->
       <!-- .site-section -->
 
       <footer class="footer-section">
         <div class="container">
-          <div class="row">
-            <div class="col-lg-3">
-              <div class="widget mb-3">
-                <h3>News</h3>
-                <ul class="list-unstyled links">
-                  <li><a href="#">All</a></li>
-                  <li><a href="#">Club News</a></li>
-                  <li><a href="#">Media Center</a></li>
-                  <li><a href="#">Video</a></li>
-                  <li><a href="#">RSS</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-3">
-              <div class="widget mb-3">
-                <h3>Tickets</h3>
-                <ul class="list-unstyled links">
-                  <li><a href="#">Online Ticket</a></li>
-                  <li><a href="#">Payment and Prices</a></li>
-                  <li><a href="#">Contact &amp; Booking</a></li>
-                  <li><a href="#">Tickets</a></li>
-                  <li><a href="#">Coupon</a></li>
-                </ul>
-              </div>
-            </div>
+          <div class="row d-flex justify-content-center">
             <div class="col-lg-3">
               <div class="widget mb-3">
                 <h3>Matches</h3>
                 <ul class="list-unstyled links">
-                  <li><a href="#">Standings</a></li>
-                  <li><a href="#">World Cup</a></li>
-                  <li><a href="#">La Lega</a></li>
-                  <li><a href="#">Hyper Cup</a></li>
-                  <li><a href="#">World League</a></li>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="matches.html">Matches</a></li>
+                  <li><a href="standing.html">Standings</a></li>
+                  <li><a href="stats.html">Stats</a></li>
                 </ul>
               </div>
             </div>
@@ -184,6 +157,7 @@
         </div>
       </footer>
 
+
     </div>
     <!-- .site-wrap -->
 
@@ -204,7 +178,7 @@
 
     <script src="js/main.js"></script>
     
-    <script>
+    <!-- <script>
         document.addEventListener("DOMContentLoaded", function() {
             fetch('/allPlayers')
                 .then(response => response.json())
@@ -225,7 +199,7 @@
                 })
                 .catch(error => console.error('Error fetching players:', error));
         });
-    </script>
+    </script> -->
 
 
   </body>
