--- a/public/login.html
+++ b/public/login.html
@@ -102,22 +102,51 @@
       </div>
 
       <footer class="footer-section">
-          <div class="container">
-              <div class="row text-center">
-                  <div class="col-md-12">
-                      <div class="pt-5">
-                          <p>
-                              Copyright &copy;
-                              <script>
-                                  document.write(new Date().getFullYear());
-                              </script>
-                              All rights reserved
-                          </p>
-                      </div>
-                  </div>
+        <div class="container">
+          <div class="row d-flex justify-content-center">
+            <div class="col-lg-3">
+              <div class="widget mb-3">
+                <h3>Matches</h3>
+                <ul class="list-unstyled links">
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="matches.html">Matches</a></li>
+                  <li><a href="standing.html">Standings</a></li>
+                  <li><a href="stats.html">Stats</a></li>
+                </ul>
               </div>
+            </div>
+
+            <div class="col-lg-3">
+              <div class="widget mb-3">
+                <h3>Social</h3>
+                <ul class="list-unstyled links">
+                  <li><a href="#">Twitter</a></li>
+                  <li><a href="#">Facebook</a></li>
+                  <li><a href="#">Instagram</a></li>
+                  <li><a href="#">Youtube</a></li>
+                </ul>
+              </div>
+            </div>
           </div>
+
+          <div class="row text-center">
+            <div class="col-md-12">
+              <div class="pt-5">
+                <p>
+                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                  Copyright &copy;
+                  <script>
+                    document.write(new Date().getFullYear());
+                  </script>
+                  All rights reserved
+                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </footer>
+
   </div>
   <!-- .site-wrap -->
 
