--- a/public/addMatch.html
+++ b/public/addMatch.html
@@ -162,45 +162,21 @@
 
       <footer class="footer-section">
         <div class="container">
-          <div class="row">
-            <div class="col-lg-3">
-              <div class="widget mb-3">
-                <h3>News</h3>
-                <ul class="list-unstyled links">
-                  <li><a href="#">All</a></li>
-                  <li><a href="#">Club News</a></li>
-                  <li><a href="#">Media Center</a></li>
-                  <li><a href="#">Video</a></li>
-                  <li><a href="#">RSS</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-3">
-              <div class="widget mb-3">
-                <h3>Tickets</h3>
-                <ul class="list-unstyled links">
-                  <li><a href="#">Online Ticket</a></li>
-                  <li><a href="#">Payment and Prices</a></li>
-                  <li><a href="#">Contact & Booking</a></li>
-                  <li><a href="#">Tickets</a></li>
-                  <li><a href="#">Coupon</a></li>
-                </ul>
-              </div>
-            </div>
+          <div class="row d-flex justify-content-center">
             <div class="col-lg-3">
               <div class="widget mb-3">
                 <h3>Matches</h3>
                 <ul class="list-unstyled links">
-                  <li><a href="#">Standings</a></li>
-                  <li><a href="#">World Cup</a></li>
-                  <li><a href="#">La Lega</a></li>
-                  <li><a href="#">Hyper Cup</a></li>
-                  <li><a href="#">World League</a></li>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="matches.html">Matches</a></li>
+                  <li><a href="standing.html">Standings</a></li>
+                  <li><a href="stats.html">Stats</a></li>
                 </ul>
               </div>
             </div>
+
             <div class="col-lg-3">
-              <div class="widget">
+              <div class="widget mb-3">
                 <h3>Social</h3>
                 <ul class="list-unstyled links">
                   <li><a href="#">Twitter</a></li>
@@ -212,21 +188,24 @@
             </div>
           </div>
 
-          <div class="row pt-5 mt-5 text-center">
+          <div class="row text-center">
             <div class="col-md-12">
-              <div class="border-top pt-5">
-                <p class="copyright">
+              <div class="pt-5">
+                <p>
+                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                   Copyright &copy;
                   <script>
                     document.write(new Date().getFullYear());
                   </script>
-                  All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" class="text-primary">Colorlib</a>
+                  All rights reserved
+                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </p>
               </div>
             </div>
           </div>
         </div>
       </footer>
+
     </div>
 
     <script src="js/jquery-3.3.1.min.js"></script>
