--- a/public/matches.html
+++ b/public/matches.html
@@ -112,40 +112,15 @@
 
       <footer class="footer-section">
         <div class="container">
-          <div class="row">
-            <div class="col-lg-3">
-              <div class="widget mb-3">
-                <h3>News</h3>
-                <ul class="list-unstyled links">
-                  <li><a href="#">All</a></li>
-                  <li><a href="#">Club News</a></li>
-                  <li><a href="#">Media Center</a></li>
-                  <li><a href="#">Video</a></li>
-                  <li><a href="#">RSS</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-3">
-              <div class="widget mb-3">
-                <h3>Tickets</h3>
-                <ul class="list-unstyled links">
-                  <li><a href="#">Online Ticket</a></li>
-                  <li><a href="#">Payment and Prices</a></li>
-                  <li><a href="#">Contact &amp; Booking</a></li>
-                  <li><a href="#">Tickets</a></li>
-                  <li><a href="#">Coupon</a></li>
-                </ul>
-              </div>
-            </div>
+          <div class="row d-flex justify-content-center">
             <div class="col-lg-3">
               <div class="widget mb-3">
                 <h3>Matches</h3>
                 <ul class="list-unstyled links">
-                  <li><a href="#">Standings</a></li>
-                  <li><a href="#">World Cup</a></li>
-                  <li><a href="#">La Lega</a></li>
-                  <li><a href="#">Hyper Cup</a></li>
-                  <li><a href="#">World League</a></li>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="matches.html">Matches</a></li>
+                  <li><a href="standing.html">Standings</a></li>
+                  <li><a href="stats.html">Stats</a></li>
                 </ul>
               </div>
             </div>
@@ -180,6 +155,7 @@
           </div>
         </div>
       </footer>
+
     </div>
     <!-- .site-wrap -->
 
