--- a/public/stats.html
+++ b/public/stats.html
@@ -64,9 +64,9 @@
     </div>
 
     <div class="container mt-5">
-      <div class="row">
-        <div class="col-lg-6 mb-5">
-          <h2 class="heading">Top Goal Scorers</h2>
+      <div class="row  d-flex justify-content-center">
+        <div class="col-lg-10 mb-5">
+          <h2 class="heading text-center">Top Goal Scorers</h2>
           <table id="top-goals-players" class="table table-striped table-dark">
             <thead>
               <tr>
@@ -82,7 +82,7 @@
           </table>
         </div>
 
-        <div class="col-lg-6 mb-5">
+        <!-- <div class="col-lg-6 mb-5">
           <h2 class="heading">Top Assists</h2>
           <table id="top-assists-players" class="table table-striped table-dark">
             <thead>
@@ -94,52 +94,27 @@
               </tr>
             </thead>
             <tbody>
-              <!-- Data will be inserted here by JavaScript -->
             </tbody>
           </table>
-        </div>
+        </div> -->
       </div>
     </div>
 
     <footer class="footer-section">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-3">
-            <div class="widget mb-3">
-              <h3>News</h3>
-              <ul class="list-unstyled links">
-                <li><a href="#">All</a></li>
-                <li><a href="#">Club News</a></li>
-                <li><a href="#">Media Center</a></li>
-                <li><a href="#">Video</a></li>
-                <li><a href="#">RSS</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="widget mb-3">
-              <h3>Tickets</h3>
-              <ul class="list-unstyled links">
-                <li><a href="#">Online Ticket</a></li>
-                <li><a href="#">Payment and Prices</a></li>
-                <li><a href="#">Contact &amp; Booking</a></li>
-                <li><a href="#">Tickets</a></li>
-                <li><a href="#">Coupon</a></li>
-              </ul>
-            </div>
-          </div>
+        <div class="row d-flex justify-content-center">
           <div class="col-lg-3">
             <div class="widget mb-3">
               <h3>Matches</h3>
               <ul class="list-unstyled links">
-                <li><a href="#">Standings</a></li>
-                <li><a href="#">World Cup</a></li>
-                <li><a href="#">La Lega</a></li>
-                <li><a href="#">Hyper Cup</a></li>
-                <li><a href="#">World League</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="matches.html">Matches</a></li>
+                <li><a href="standing.html">Standings</a></li>
+                <li><a href="stats.html">Stats</a></li>
               </ul>
             </div>
           </div>
+
           <div class="col-lg-3">
             <div class="widget mb-3">
               <h3>Social</h3>
@@ -152,21 +127,25 @@
             </div>
           </div>
         </div>
+
         <div class="row text-center">
           <div class="col-md-12">
             <div class="pt-5">
               <p>
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 Copyright &copy;
                 <script>
                   document.write(new Date().getFullYear());
                 </script>
                 All rights reserved
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               </p>
             </div>
           </div>
         </div>
       </div>
     </footer>
+
   </div>
 
   <script src="js/jquery-3.3.1.min.js"></script>
@@ -195,13 +174,13 @@
         })
         .catch(error => console.error('Error fetching top goals players:', error));
 
-      fetch('/top-assists-players')
-        .then(response => response.json())
-        .then(data => {
-          console.log(data);
-          renderPlayers(data, 'top-assists-players', 'assists');
-        })
-        .catch(error => console.error('Error fetching top assists players:', error));
+      // fetch('/top-assists-players')
+      //   .then(response => response.json())
+      //   .then(data => {
+      //     console.log(data);
+      //     renderPlayers(data, 'top-assists-players', 'assists');
+      //   })
+      //   .catch(error => console.error('Error fetching top assists players:', error));
     });
 
     function renderPlayers(players, tableId, statType = 'goals') {
@@ -210,7 +189,9 @@
 
       players.forEach((player, index) => {
         const row = document.createElement('tr');
-        console.log(player)
+        if(Number(player[statType]) <= 0){
+          return;
+        }
         row.innerHTML = `
           <th scope="row">${index + 1}</th>
           <td>${player.fullname}</td>
