--- a/public/signup.html
+++ b/public/signup.html
@@ -89,9 +89,10 @@
                 <h3>Matches</h3>
                 <ul class="list-unstyled links">
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="matches.html">Matches</a></li>
-                  <li><a href="standing.html">Standings</a></li>
+                  <!-- <li><a href="matches.html">Matches</a></li>
+                  <li><a href="standing.html">Standings</a></li> -->
                   <li><a href="stats.html">Stats</a></li>
+                  <li><a href="admin.html">admin</a></li>
                 </ul>
               </div>
             </div>
