--- a/public/stats.html
+++ b/public/stats.html
@@ -38,8 +38,8 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="matches.html" class="nav-link">Matches</a></li>
-                <li><a href="standing.html" class="nav-link">Standings</a></li>
+                <!-- <li><a href="matches.html" class="nav-link">Matches</a></li>
+                <li><a href="standing.html" class="nav-link">Standings</a></li> -->
                 <li class="active"><a href="stats.html" class="nav-link">Stats</a></li>
                 <li><a href="login.html" class="nav-link">Login</a></li>
               </ul>
@@ -108,8 +108,8 @@
               <h3>Matches</h3>
               <ul class="list-unstyled links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="matches.html">Matches</a></li>
-                <li><a href="standing.html">Standings</a></li>
+                <!-- <li><a href="matches.html">Matches</a></li>
+                <li><a href="standing.html">Standings</a></li> -->
                 <li><a href="stats.html">Stats</a></li>
               </ul>
             </div>
