--- a/public/admin.html
+++ b/public/admin.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Off-brand supersport</title>
+    <title>Admin - CC Futsal League</title>
+    <link rel="shortcut icon" href="images/bg_3.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="images/bg_3.jpg" type="image/x-icon">
     <meta charset="utf-8" />
     <meta
       name="viewport"
