--- a/public/signup.html
+++ b/public/signup.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Signup - Campus Central Futsal League</title>
+  <title>Create User</title>
+  <link rel="shortcut icon" href="images/bg_3.jpg" type="image/x-icon">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
@@ -29,7 +30,7 @@
                       <nav class="site-navigation position-relative text-right" role="navigation">
                         <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                           <li><a href="index.html" class="nav-link">Home</a></li>
-                          <li><a href="editStandings.html" class="nav-link">Edit Standings</a></li>
+                          <!-- <li><a href="editStandings.html" class="nav-link">Edit Standings</a></li> -->
                           <li class="active"><a href="signup.html" class="nav-link">Create User</a></li>
                           <li><a href="admin.html" class="nav-link">Admin</a></li>
                           <li><a id="logout" href="/auth/logout" class="nav-link">logout</a></li>
