--- a/public/login.html
+++ b/public/login.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-      <title>Off-brand supersport</title>
+      <title>Login</title>
+      <link rel="shortcut icon" href="images/bg_3.jpg" type="image/x-icon">
       <meta charset="utf-8" />
       <meta
         name="viewport"
