--- a/public/matches.html
+++ b/public/matches.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Campus Central Futsal League</title>
+    <title>Matches</title>
+    <link rel="shortcut icon" href="images/bg_3.jpg" type="image/x-icon">
     <meta charset="utf-8" />
     <meta
       name="viewport"
