--- a/public/stats.html
+++ b/public/stats.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Campus Central Futsal League - Player Stats</title>
+  <title>Stats - CC Futsal League</title>
+  <link rel="shortcut icon" href="images/bg_3.jpg" type="image/x-icon">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
